@@ -1,3 +1,9 @@
+2008-07-30  Badlop  <badlop@process-one.net>
+
+	* src/gen_mod.erl: When ejabberd is kindly stopped, don't forget
+	modules configuration (EJAB-706)
+	* src/ejabberd_app.erl: Likewise
+
 2008-07-28  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: Document how to get error message when ejabberd
